--- a/Yapoml.Selenium.Sandbox.csproj
+++ b/Yapoml.Selenium.Sandbox.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Yapoml.Selenium" Version="0.37.2" />
+    <PackageReference Include="Yapoml.Selenium" Version="0.38.1" />
   </ItemGroup>
 
 </Project>
